added logo img, fixed header, uploading for lind

--- a/about-us.html
+++ b/about-us.html
@@ -35,49 +35,13 @@
                     </button>
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto" id="mainnavbar">
-                            <li class="nav-item active dropdown">
-                                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Home <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="index.html">Home - 1</a></li>
-                                    <li><a href="index-2.html">Home - 2</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Pages <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="pricing.html">pricing</a></li>
-                                    <li><a href="class.html">Class</a></li>
-                                    <li><a href="class-schedule.html">class-schedule</a></li>
-                                    <li><a href="class-single.html">class-single</a></li>
-                                    <li><a href="trainers.html">trainers</a></li>
-                                    <li><a href="404.html">404 page</a></li>
-                                </ul>
-                            </li>
+                            <li ><a href="index.html">Home</a></li>
+                            <li><a href="about-us.html">About</a></li>
 
-                            <li class="nav-item "><a href="about-us.html">About us</a></li>
-                            <li class="nav-item "><a href="gallery.html">Gallery</a></li>
-                            <li class="nav-item dropdown">
-                                <a href="shop.html" data-toggle="dropdown" class="dropdown-toggle">Shop <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="shop.html">Shop</a></li>
-                                    <li><a href="shop-single.html">Shop single</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a href="blog.html" data-toggle="dropdown" class="dropdown-toggle">blog <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="blog.html">blog</a></li>
-                                    <li><a href="single.html">blog single</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item "><a href="contact.html">contact</a></li>
-                        </ul>
-                        <ul class="navbar-nav nav-btn right-side-menu">
-                            <li class="nav-item"><a href="#"><i class="fa fa-cart-plus"></i></a></li>
-                            <li class="nav-item"><a href="#" class="search-bar"><i class="fa fa-search"></i></a></li>
-                            <li class="nav-item"><a href="#" class="opcanvas-menu-bar"><i class="fa fa-bars"></i></a></li>
-                        </ul>
-                    </div>
+                            <li class="nav-item "><a href="class.html">Classes</a></li>
+                            <li class="nav-item "><a href="trainers.html">Coaches</a></li>
+                            
+                           
 
                 </div>
             </nav>
