added class images

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <div class="single-feature-icon">
                                 <img src="assets/img/feature/gym.png" alt="Single Feature">
                             </div>
-                            <h3 class="text-uppercase mt-40">Weight lifting</h3>
+                            <h3 class="text-uppercase mt-40">Strength Training</h3>
                         </div>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                         <div class="about-us-area-background">
                             <img src="assets/img/about/about-us.jpg" alt="">
                             <div class="about-us-right-side-inner-content">
-                                <h1><span>27+</span>Years of Experience</h1>
+                                <h1><span>10+</span>Years of Experience</h1>
                             </div>
                         </div>
 
@@ -212,7 +212,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-class-item position-relative text-center  pl-30 pr-30 d-flex align-items-center" data-background="assets/img/class/class-1.jpg">
+                    <div class="single-class-item position-relative text-center  pl-30 pr-30 d-flex align-items-center" data-background="https://images.unsplash.com/photo-1594381898411-846e7d193883?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80">
                         <div class="single-class-item-overlay-content d-flex align-items-center">
 
                             <div class="site-btn single-classe-btn">
@@ -227,7 +227,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-class-item position-relative text-center  pl-30 pr-30 d-flex align-items-center" data-background="assets/img/class/class-2.jpg">
+                    <div class="single-class-item position-relative text-center  pl-30 pr-30 d-flex align-items-center" data-background="https://images.unsplash.com/photo-1574680096145-d05b474e2155?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80">
                         <div class="single-class-item-overlay-content d-flex align-items-center">
 
                             <div class="site-btn single-classe-btn">
@@ -242,7 +242,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-class-item position-relative text-center  pl-30 pr-30 d-flex align-items-center" data-background="assets/img/class/class-3.jpg">
+                    <div class="single-class-item position-relative text-center  pl-30 pr-30 d-flex align-items-center" data-background="https://images.unsplash.com/photo-1518611012118-696072aa579a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
                         <div class="single-class-item-overlay-content d-flex align-items-center">
 
                             <div class="site-btn single-classe-btn">
