--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                                 <a class="nav-link active" id="all-tab" data-toggle="tab" href="#all" role="tab" aria-controls="all" aria-selected="true">All Classes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="false">genaral boxing</a>
+                                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="false">Strength Training</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">weight loss</a>
@@ -1438,7 +1438,7 @@
     </section>
     <!-- Class schedule area end -->
     <!-- Why Join us area start -->
-    <section class="why-join-us-area position-relative pt-130 pb-130" data-background="assets/img/join/join-us.jpg">
+    <section class="why-join-us-area position-relative pt-130 pb-130" data-background="https://images.unsplash.com/photo-1605296867304-46d5465a13f1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
         <div class="why-join-us-overlay"></div>
         <div class="container">
             <div class="row">
@@ -1458,7 +1458,7 @@
             </div>
         </div>
         <div class="why-join-us-thumb">
-            <img src="assets/img/join/join-us-thumb.png" alt="">
+            <img src="https://images.unsplash.com/photo-1590556409324-aa1d726e5c3c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" height="540px" alt="">
         </div>
     </section>
     <!-- Why Join us area End -->
@@ -1474,14 +1474,14 @@
                 </div>
                 <div class="col-lg-5  col-md-5 col-sm-6 text-right">
                     <div class="site-btn about-btn team-btn">
-                        <a href="#" class="primary-btn btn filled-btn text-uppercase">join as as trainer</a>
+                        <!-- <a href="#" class="primary-btn btn filled-btn text-uppercase">join as as trainer</a> -->
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-team-expert">
-                        <div class="team-expert-bg position-relative" data-background="assets/img/team/team-01.jpg">
+                        <div class="team-expert-bg position-relative" data-background="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
                             <div class="team-expert-social-list">
                                 <div class="social-list expert-social-list">
                                     <a href="#"><i class="fa fa-instagram"></i></a>
@@ -1493,12 +1493,16 @@
                         <div class="team-expert-meta text-center mt-30">
                             <h4 class="text-uppercase mb-15">DAVID PK. WILLIAM</h4>
                             <p class="text-uppercase">Yoga Trainer</p>
+                            <ul>
+                                <li> <span class="text-uppercase"> Classes:</span> Strength Training</li>
+                                <li>About: I've been training with lorem ipsum since the gladiators began</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-team-expert">
-                        <div class="team-expert-bg position-relative" data-background="assets/img/team/team-02.jpg">
+                        <div class="team-expert-bg position-relative" data-background="https://images.unsplash.com/photo-1616279969096-54b228f5f103?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80">
                             <div class="team-expert-social-list">
                                 <div class="social-list expert-social-list">
                                     <a href="#"><i class="fa fa-instagram"></i></a>
@@ -1510,12 +1514,16 @@
                         <div class="team-expert-meta text-center mt-30">
                             <h4 class="text-uppercase mb-15">Mark pk Parker</h4>
                             <p class="text-uppercase">Yoga Trainer</p>
+                            <ul>
+                                <li> <span class="text-uppercase"> Classes:</span> Strength Training</li>
+                                <li>About: I've been training with lorem ipsum since the gladiators began</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-team-expert">
-                        <div class="team-expert-bg position-relative" data-background="assets/img/team/team-03.jpg">
+                        <div class="team-expert-bg position-relative" data-background="https://images.unsplash.com/photo-1518617840859-acd542e13a99?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1052&q=80">
                             <div class="team-expert-social-list">
                                 <div class="social-list expert-social-list">
                                     <a href="#"><i class="fa fa-instagram"></i></a>
@@ -1527,6 +1535,10 @@
                         <div class="team-expert-meta text-center mt-30">
                             <h4 class="text-uppercase mb-15">steve m. jobs</h4>
                             <p class="text-uppercase">Yoga Trainer</p>
+                            <ul>
+                                <li> <span class="text-uppercase"> Classes:</span> Strength Training</li>
+                                <li>About: I've been training with lorem ipsum since the gladiators began</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -1544,6 +1556,10 @@
                         <div class="team-expert-meta text-center mt-30">
                             <h4 class="text-uppercase mb-15">jonathan deo</h4>
                             <p class="text-uppercase">Yoga Trainer</p>
+                            <ul>
+                                <li> <span class="text-uppercase"> Classes:</span> Strength Training</li>
+                                <li>About: I've been training with lorem ipsum since the gladiators began</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
