--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="hero-ara-innar-content">
-                        <h1 class="text-uppercase">Be Your Own <span class="red">HERO</span></h1>
+                        <h1 class="text-uppercase">Be Your Own <span class="red" style="color:red;">HERO</span></h1>
                         <div class="site-btn">
                             <a href="#" class="primary-btn btn filled-btn">Learn More Today</a>
                         </div>
@@ -95,7 +95,7 @@
             <div class="row d-flex justify-content-md-center  justify-content-sm-center">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-item-area-wrapper position-relative">
-                        <div class="overlay-feature-content d-flex align-items-center" data-background="assets/img/feature/feature-image.jpg">
+                        <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1616279969722-d81a5a3944ef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=727&q=80">
                             <div class="overlay-feature-inner-content">
                                 <p class="mb-30">Morbi sit amet sollicitudin lorem. Vestibulum mauris ligula, pulvinar ut ligula at, volutpat semper leo Nullam rhoncu.</p>
 
@@ -116,7 +116,7 @@
 
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-item-area-wrapper position-relative">
-                        <div class="overlay-feature-content d-flex align-items-center" data-background="assets/img/feature/feature-image.jpg">
+                        <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1616279969722-d81a5a3944ef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=727&q=80">
                             <div class="overlay-feature-inner-content">
                                 <p class="mb-30">Morbi sit amet sollicitudin lorem. Vestibulum mauris ligula, pulvinar ut ligula at, volutpat semper leo Nullam rhoncu.</p>
 
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-item-area-wrapper position-relative">
-                        <div class="overlay-feature-content d-flex align-items-center" data-background="assets/img/feature/feature-image.jpg">
+                        <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1519311965067-36d3e5f33d39?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80">
                             <div class="overlay-feature-inner-content">
                                 <p class="mb-30">Morbi sit amet sollicitudin lorem. Vestibulum mauris ligula, pulvinar ut ligula at, volutpat semper leo Nullam rhoncu.</p>
 
@@ -1544,7 +1544,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-team-expert">
-                        <div class="team-expert-bg position-relative" data-background="assets/img/team/team-04.jpg">
+                        <div class="team-expert-bg position-relative" data-background="https://images.unsplash.com/photo-1519311965067-36d3e5f33d39?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80">
                             <div class="team-expert-social-list">
                                 <div class="social-list expert-social-list">
                                     <a href="#"><i class="fa fa-instagram"></i></a>
