--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@
                             <li class="nav-item">
                                 <a class="nav-link active" id="all-tab" data-toggle="tab" href="#all" role="tab" aria-controls="all" aria-selected="true">All Classes</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="false">Strength Training</a>
-                            </li>
+                            </li> -->
                             <li class="nav-item">
-                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">weight loss</a>
+                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Strength</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contacttab" role="tab" aria-controls="contact" aria-selected="false">yoga class</a>
@@ -1568,7 +1568,7 @@
     </section>
     <!-- Team Expert area End -->
     <!-- Shop area start -->
-    <section class="shop-area position-relative pt-130 pb-130 gray-bg">
+    <!-- <section class="shop-area position-relative pt-130 pb-130 gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12  text-center mb-60">
@@ -1771,7 +1771,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Shop area End -->
     <!-- Testimonial area start -->
     <section class="testimonial-area position-relative pt-130 pb-130" data-background="assets/img/testimonial/testimonial-bg.jpg">
@@ -1812,7 +1812,7 @@
     </section>
     <!-- Testimonial area End -->
     <!-- Blog area start -->
-    <section class="blog-area position-relative pt-130">
+    <!-- <section class="blog-area position-relative pt-130">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12  text-center mb-60">
@@ -1894,7 +1894,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Blog area End -->
     <!-- banenr area start -->
     <section class="banner-area position-relative pt-130 pb-130">
