added testimonial image

--- a/index.html
+++ b/index.html
@@ -1774,14 +1774,14 @@
     </section> -->
     <!-- Shop area End -->
     <!-- Testimonial area start -->
-    <section class="testimonial-area position-relative pt-130 pb-130" data-background="assets/img/testimonial/testimonial-bg.jpg">
+    <section class="testimonial-area position-relative pt-130 pb-130" data-background="https://images.unsplash.com/photo-1521804906057-1df8fdb718b7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-10">
                     <div class="testimonial-area-wrapper owl-carousel">
 
                         <div class="single-testimonial-list d-flex align-items-center item">
-                            <div class="client-image position-relative" data-background="assets/img/testimonial/testimonial-client-1.jpg">
+                            <div class="client-image position-relative" data-background="https://images.unsplash.com/photo-1589860518300-9eac95f784d9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" >
                                 <div class="testimonial-qoute"><i class="fa fa-quote-right"></i> </div>
                             </div>
                             <div class="testimonial-inner-content">
