added footer banner

--- a/index.html
+++ b/index.html
@@ -1899,7 +1899,7 @@
     <!-- banenr area start -->
     <section class="banner-area position-relative pt-130 pb-130">
         <div class="container">
-            <div class="banner-outer-row position-relative pt-60 pb-60 pl-100 pr-100" data-background="assets/img/banner/banenr-bg.jpg">
+            <div class="banner-outer-row position-relative pt-60 pb-60 pl-100 pr-100" data-background="https://images.unsplash.com/photo-1534258936925-c58bed479fcb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80">
                 <div class="banner-outer-row-overlay"></div>
                 <div class="row d-flex align-items-center">
                     <div class="col-lg-8">
@@ -1922,7 +1922,7 @@
     <!-- banenr area end -->
 
     <!-- footer area start -->
-    <footer class="footer-area position-relative pt-130" data-background="assets/img/footer/footer-bg.png">
+    <footer class="footer-area position-relative pt-130" data-background="https://images.unsplash.com/photo-1534258936925-c58bed479fcb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1331&q=80">
         <div class="footer-top-area pb-80">
             <div class="container">
                 <div class="row d-flex justify-content-between">
