--- a/trainers.html
+++ b/trainers.html
@@ -35,7 +35,7 @@
                     </button>
                     <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                         <ul class="nav navbar-nav menu_nav ml-auto" id="mainnavbar">
-                            <li ><a href="#home">Home</a></li>
+                            <li ><a href="index.html">Home</a></li>
                             <li><a href="about-us.html">About</a></li>
 
                             <li class="nav-item "><a href="class.html">Classes</a></li>
