update contact info

--- a/index.html
+++ b/index.html
@@ -1941,8 +1941,8 @@
                             <h3 class="text-uppercase mb-20">Contact Info</h3>
                             <div class="contact-info">
                                 <ul>
-                                    <li><i class="fa fa-map"></i>2750 Quadra Street Victoria, USA</li>
-                                    <li><i class="fa fa-envelope"></i><a href="mailto:info@example.com">info@example.com</a></li>
+                                    <li><i class="fa fa-map"></i>2750 Fort Scott Kansas, USA</li>
+                                    <li><i class="fa fa-envelope"></i><a href="mailto:admin@smallville-athletics.com">admin@smallviille-athleticscom</a></li>
                                     <li><i class="fa fa-phone"></i><a href="tel:+324-9442-515">+324-9442-515</a></li>
                                 </ul>
                             </div>
@@ -1980,7 +1980,7 @@
                 <div class="row d-flex align-items-center">
                     <div class="col-lg-10  col-md-6  col-sm-6">
                         <div class="copyright-content">
-                            <p>© Copyright M.ALi 2019. All Right Reserved. Designed by UI Park Team</p>
+                            <p>© Copyright Smallville Athletics 2022. All Right Reserved. Designed by Tyler Wallace</p>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-6 text-right">
