update about section

--- a/about-us.html
+++ b/about-us.html
@@ -123,11 +123,11 @@
             </div>
             <div class="row d-flex justify-content-md-center">
                 <div class="col-lg-4  col-md-6">
-                    <div class="single-feature-item positin-relative" data-background="assets/img/feature/featured-1.jpg">
+                    <div class="single-feature-item positin-relative" data-background="https://images.unsplash.com/photo-1601422407692-ec4eeec1d9b3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80">
                         <div class="single-feared-imted-wrapper position-relative">
                             <div class="featured-list-title">
                                 <div class="featured-list-title-content text-center">
-                                    <h3 class="text-uppercase">Cardio Training</h3>
+                                    <h3 class="text-uppercase">Strength</h3>
                                 </div>
                             </div>
                             <div class="feature-list-ovelay-content">
@@ -145,11 +145,11 @@
                     </div>
                 </div>
                 <div class="col-lg-4  col-md-6">
-                    <div class="single-feature-item positin-relative" data-background="assets/img/feature/featured-2.jpg">
+                    <div class="single-feature-item positin-relative" data-background="https://images.unsplash.com/photo-1554284126-aa88f22d8b74?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1294&q=80">
                         <div class="single-feared-imted-wrapper position-relative">
                             <div class="featured-list-title">
                                 <div class="featured-list-title-content text-center">
-                                    <h3 class="text-uppercase">Cardio Training</h3>
+                                    <h3 class="text-uppercase">Cardio</h3>
                                 </div>
                             </div>
                             <div class="feature-list-ovelay-content">
@@ -195,14 +195,14 @@
     <!-- Our Feature area end -->
 
     <!-- Testimonial area start -->
-    <section class="testimonial-area position-relative pt-130 pb-130" data-background="assets/img/testimonial/testimonial-bg.jpg">
+    <section class="testimonial-area position-relative pt-130 pb-130" data-background="https://images.unsplash.com/photo-1557330359-ffb0deed6163?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-10">
                     <div class="testimonial-area-wrapper owl-carousel">
 
                         <div class="single-testimonial-list d-flex align-items-center item">
-                            <div class="client-image position-relative" data-background="assets/img/testimonial/testimonial-client-1.jpg">
+                            <div class="client-image position-relative" data-background="https://images.unsplash.com/photo-1622107151292-d4309c81121c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80">
                                 <div class="testimonial-qoute"><i class="fa fa-quote-right"></i> </div>
                             </div>
                             <div class="testimonial-inner-content">
