--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <div class="row">
                 <div class="col-lg-12  text-center mb-60">
                     <div class="section-title">
-                        <h4 class="text-uppercase mb-20">popular services</h4>
-                        <h1 class="text-uppercase">Our featured Services</h1>
+                        <h4 class="text-uppercase mb-20">popular classes</h4>
+                        <h1 class="text-uppercase">Our featured Classes</h1>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                     <div class="single-item-area-wrapper position-relative">
                         <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1616279969722-d81a5a3944ef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=727&q=80">
                             <div class="overlay-feature-inner-content">
-                                <p class="mb-30">Morbi sit amet sollicitudin lorem. Vestibulum mauris ligula, pulvinar ut ligula at, volutpat semper leo Nullam rhoncu.</p>
+                                <p class="mb-30">A 60 minute class designed to challenge your strength, speed, and overall fitness. Variety of Barbell, accessory, gymnastic, and cardio movements all wrapped in one.</p>
 
                                 <div class="site-btn feature-btn">
                                     <a href="#" class="primary-btn btn filled-btn">learn more</a>
@@ -109,7 +109,7 @@
                             <div class="single-feature-icon">
                                 <img src="assets/img/feature/gym.png" alt="Single Feature">
                             </div>
-                            <h3 class="text-uppercase mt-40">Weight lifting</h3>
+                            <h3 class="text-uppercase mt-40">Strength Class</h3>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     <div class="single-item-area-wrapper position-relative">
                         <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1616279969722-d81a5a3944ef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=727&q=80">
                             <div class="overlay-feature-inner-content">
-                                <p class="mb-30">Morbi sit amet sollicitudin lorem. Vestibulum mauris ligula, pulvinar ut ligula at, volutpat semper leo Nullam rhoncu.</p>
+                                <p class="mb-30">Hybrid Class designed to provide 45 minutes of barbell plus cardio, giving you the ultimate workout. Stamina is our goal!</p>
 
                                 <div class="site-btn feature-btn">
                                     <a href="#" class="primary-btn btn filled-btn">learn more</a>
@@ -130,7 +130,7 @@
                             <div class="single-feature-icon">
                                 <img src="assets/img/feature/gym.png" alt="Single Feature">
                             </div>
-                            <h3 class="text-uppercase mt-40">Strength Training</h3>
+                            <h3 class="text-uppercase mt-40">Engine Class</h3>
                         </div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                     <div class="single-item-area-wrapper position-relative">
                         <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1519311965067-36d3e5f33d39?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80">
                             <div class="overlay-feature-inner-content">
-                                <p class="mb-30">Morbi sit amet sollicitudin lorem. Vestibulum mauris ligula, pulvinar ut ligula at, volutpat semper leo Nullam rhoncu.</p>
+                                <p class="mb-30">45 Minute class with our focus on core and cardio. Great for ALL levels of fitness! </p>
 
                                 <div class="site-btn feature-btn">
                                     <a href="#" class="primary-btn btn filled-btn">learn more</a>
@@ -150,7 +150,7 @@
                             <div class="single-feature-icon">
                                 <img src="assets/img/feature/Icon-2.png" alt="Single Feature">
                             </div>
-                            <h3 class="text-uppercase mt-40">climbing</h3>
+                            <h3 class="text-uppercase mt-40">Sweat Class</h3>
                         </div>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
                                 tincidunt tincidunt porttitor. Duis pharetra euismod fringilla. Phasellus ac vestibulum quam.</p>
                             <p class="mb-40">Vivamus lorem dolor, mollis nec maximus in, rutrum vel tellus. Donec eu odio et diam elementum porttitor. Suspendisse tincidunt tincidunt p orttitor. Duis pharetra euismod fringilla. Phasellus ac vestibulum quam.</p>
                             <div class="site-btn about-btn">
-                                <a href="#" class="primary-btn btn filled-btn text-uppercase">contact with us</a>
+                                <a href="#" class="primary-btn btn filled-btn text-uppercase">contact us</a>
                             </div>
                         </div>
 
@@ -221,8 +221,8 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">Girls Stregnth</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
+                            <h3 class="text-uppercase mb-30">Strength Class</h3>
+                            <p>A 60 minute class designed to challenge your strength, speed, and overall fitness.</p>
                         </div>
                     </div>
                 </div>
@@ -236,8 +236,8 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">Girls Stregnth</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
+                            <h3 class="text-uppercase mb-30">Engine Class</h3>
+                            <p>Hybrid Class designed to provide 45 minutes of barbell plus cardio, giving you the ultimate workout.</p>
                         </div>
                     </div>
                 </div>
@@ -251,8 +251,8 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">zumba athletic</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
+                            <h3 class="text-uppercase mb-30">Sweat Class</h3>
+                            <p>45 minute class with our focus on core and cardio. Great for ALL levels of fitness.</p>
                         </div>
                     </div>
                 </div>
@@ -266,8 +266,8 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">meditation</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
+                            <h3 class="text-uppercase mb-30">Bootcamp <br>(Women Only)</h3>
+                            <p>40 minute, high energy circuit cardio class. HIt type workout with equipment. Come sweat with the girls and have fun! </p>
                         </div>
                     </div>
                 </div>
@@ -281,8 +281,8 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">training with rope</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
+                            <h3 class="text-uppercase mb-30">Kids Classes</h3>
+                            <p>45 minute class, borken down by age groups and fitness level - designed to provide balance, core, functional training, speed, agility, and so much more in a fun atmosphere.</p>
                         </div>
                     </div>
                 </div>
@@ -296,8 +296,8 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">punch boxing</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
+                            <h3 class="text-uppercase mb-30">Personal Training</h3>
+                            <p>Let our team of coaches guide you in the necessary steps towards bettering your life. Wether it be core, strength, speed, agility, or any combination of the above we're here to guide you towards a healthy life</p>
                         </div>
                     </div>
                 </div>
