--- a/index.html
+++ b/index.html
@@ -1500,7 +1500,7 @@
                 <div class="col-lg-7 col-md-7 col-sm-6 mb-60">
                     <div class="section-title">
                         <h4 class="text-uppercase mb-20">- Team mates -</h4>
-                        <h1 class="text-uppercase">Our Expert trainer</h1>
+                        <h1 class="text-uppercase">Our Expert Coaches</h1>
                     </div>
                 </div>
                 <div class="col-lg-5  col-md-5 col-sm-6 text-right">
